# virtual-escrow

./: CMakeLists.txt  README.md  client.cpp  messageformat.h  server-db.cpp  server-db.h  server.cpp  shared.cpp  shared.h  start.gdb  virtualescrow.kdev4  virtualitems.cpp  virtualitems.h
.kdev4/: virtualescrow.kdev4
client/: CMakeLists.txt  client-process.cpp  client-process.h  client-ui.cpp  client-ui.h
protos/: echo.pb.cc  echo.pb.h  echo.proto  session.proto  trade.proto
server/: CMakeLists.txt  server-db.cpp  server-db.h  server-process.cpp  server-process.h
shared/: BaseProcess.tpp  CMakeLists.txt  Logger.tpp  messageformat.h  shared.cpp  shared.h  virtualitems.cpp  virtualitems.h
sqlite-amalgamation-3081002/: CMakeLists.txt
